minor improvement of the conclusion of vol.2

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "Crucially, the ``.qubitization`` operator is also how one encodes the Chebyshev polynomials of the Hamiltonian, as we'll learn in the next part of the tutorial. \n",
     "\n",
-    "### Block encoding Chebyshev polynomials\n",
+    "## Block encoding Chebyshev polynomials\n",
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(\\frac{A}{\\alpha})$ block encoded in the top-left block:\n",
     "$$(\\bra{G} \\otimes \\mathbb{1}) W^k (\\ket{G} \\otimes \\mathbb{1}) = T_k(\\frac{A}{\\alpha}).$$\n",
     "\n",
@@ -232,7 +232,7 @@
     "\n",
     "In the classical world, high-order polynomial approximations often come with a heavy computational tax. On a quantum computer, thanks to Qubitization, the $k$-th Chebyshev polynomial $T_k$ is implemented simply by repeating the walk operator $W$ exactly $k$ times. This efficiency is the \"secret sauce\" behind many modern quantum algorithms—we get high-precision approximations without the exponential gate-count explosion.\n",
     "\n",
-    "### Quantum Lanczos method\n",
+    "## Quantum Lanczos method\n",
     "\n",
     "The ability to efficiently block-encode Chebyshev polynomials isn't just a mathematical flex; it’s a prerequisite for one of the most exciting algorithms in recent years: the Quantum Lanczos Method.\n",
     "\n",
@@ -312,7 +312,7 @@
    "id": "d7be9efc",
    "metadata": {},
    "source": [
-    "### Childs Kothari Somma for solving linear systems\n",
+    "## Childs Kothari Somma for solving linear systems\n",
     "\n",
     "Before we jump into arbitrary polynomials, there is one specific application of Chebyshev polynomials combined with Linear Combination of Unitaries (LCU) that deserves its own spotlight: The Childs-Kothari-Somma (CKS) algorithm.\n",
     "\n",
@@ -496,7 +496,7 @@
    "id": "26536a3c",
    "metadata": {},
    "source": [
-    "## QSP with Qrisp\n",
+    "## QSP with Qrisp: ``.poly``, ``.inv``, and ``.sim``\n",
     "\n",
     "### Polynomial transformations: ``.poly``\n",
     "\n",
@@ -860,17 +860,9 @@
     "\n",
     "- Qrisp is the autopilot, solving for phase angles and automating resource management and uncomputation.\n",
     "\n",
-    "If you're eager for more, there is still one tutorial that continues following the concepts, where we take these concepts a step further by introducing Generalized Quantum Signal Processing (GQSP) as a powerful tool for ground state preparation.\n",
+    "- Always do your due diligence and estimate your quantum resources of your state-of-the-art top notch block encoding and other algorithmic approach.\n",
     "\n",
-    "In the next tutorial you will explore Ground State Preparation for a 10-qubit antiferromagnetic Heisenberg model. The tutorial covers:\n",
-    "\n",
-    "- Gaussian Filtering: How to define a Gaussian filter centered at the minimum eigenvalue to \"clean\" an initial state.\n",
-    "\n",
-    "- Chebyshev Approximation: The process of decomposing this filter into Chebyshev polynomials (you now know everything about), which are natively compatible with quantum block-encodings.\n",
-    "\n",
-    "- The RUS Protocol: Using the Repeat-Until-Success (RUS) mechanism in Qrisp to probabilistically project the system into the desired filtered state.\n",
-    "\n",
-    "- Performance Verification: A step-by-step comparison showing how the expectation value of the energy significantly drops—indicating a much higher overlap with the true ground state—after the GQSP filter is applied.\n"
+    "If you’re ready to get your hands dirty, the next tutorial puts these tools to work on a 10-qubit Heisenberg model. We’ll show you how to use Gaussian filtering to get a better ground state and use Chebyshev you're now a pro at. You will also use a Repeat-Until-Success (RUS) trick in Qrisp to lock in your desired state. Finally, we’ll double-check the work together by watching the energy levels drop, proving that you’ve successfully found the ground state. It’s the perfect way to see how all this theory actually solves a real-world physics problem.\n"
    ]
   }
  ],
