--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "How are we feeling? I assume that the researchers in the field could be portrayed with this emoji (😎), while people coming from outside of quantum can feel a bit overwhelmed (🥲). Let's balance the target audiences by a relevant example that is the cornerstone of solving partial differential equations, where we also explain how to use the ``.from_lcu`` method (went quite the tangent, huh? Glad you're still here - it'll be worth it!).\n",
     "\n",
-    "### Custom BlockEncoding - the discrete Laplacian\n",
+    "## Custom BlockEncoding: the discrete Laplacian example\n",
     "\n",
     "In this example, we construct a block encoding of the 1D discrete Laplacian operator with periodic boundary conditions using the ``.from_lcu`` method. The discrete Laplace operator is central in numerical physics and differential equations, representing the second derivative on a grid. \n",
     "\n",
@@ -576,9 +576,9 @@
    "id": "f2e7c4e1",
    "metadata": {},
    "source": [
-    "## Expressing new BlockEncodings using arithmetic operations\n",
+    "## Constructin new BlockEncodings using ``+``, ``-``, ``*``, ``@``, ``.kron()``\n",
     "\n",
-    "Up until now, we’ve treated Block Encodings as static objects—you build them, and you apply them. But in the real world (and especially in quantum chemistry or condensed matter physics), operators are rarely solitary. They are sums of interactions, products of symmetries, and scaled potentials.\n",
+    "Up until now, we’ve treated Block Encodings as static objects: you build them, and you apply them. But in the real world (and especially in quantum chemistry or condensed matter physics), operators are rarely solitary. They are sums of interactions, products of symmetries, and scaled potentials.\n",
     "\n",
     "To handle this, Qrisp allows you to perform a full suite of algebraic operations directly on your BlockEncoding objects:\n",
     "\n",
@@ -608,7 +608,7 @@
     "\n",
     "- Mirroring the Math: Your code starts looking exactly like the physics paper you're trying to implement.\n",
     "\n",
-    "Note of Caution: Just because you can add fifty block encodings together doesn't mean you should. Each arithmetic operation adds circuit depth and ancilla qubits. For complex polynomials, Quantum Signal Processing (QSP) is usually the more efficient path—but (more on that on the other tutorial) for building Hamiltonians, arithmetic is king.\n",
+    "Note of Caution: Just because you can add fifty block encodings together doesn't mean you should. Each arithmetic operation adds circuit depth and ancilla qubits. For complex polynomials, Quantum Signal Processing (QSP) is usually the more efficient path, but (more on that on the other tutorial) for building Hamiltonians, arithmetic is king.\n",
     "\n",
     "Let's go through some examples!"
    ]
@@ -736,7 +736,7 @@
    "id": "8d704beb",
    "metadata": {},
    "source": [
-    "## Motivation\n",
+    "## Motivation for BE 202\n",
     "\n",
     "MFeeling like you mastered the BlockEncodings class? Good. Now let's use it on some state-of-the-art research applications. In the next tutorial, we move from simple algebra to Quantum Functional Analysis, transforming a matrix’s entire spectrum using Quantum Signal Processing (QSP).\n",
     "\n",
