--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Welcome back to the tutorial on Quantum Linear Algebra. In the previous tutorial, we learned how to \"embed\" a non-unitary matrix $A$ in the top left block a larger unitary $U$ using the ``BlockEncoding`` class. But just having $A$ block encoded usually isn't enough. \n",
     "\n",
-    "Often, we want to compute functions of that matrix—like $e^{-iAt}$ for simulating physics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step-functions or the gaussian as a filter for ground-state preparation. \n",
+    "Often, we want to compute functions of that matrix; like $e^{-iAt}$ for simulating physics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step-functions or the gaussian as a filter for ground-state preparation. \n",
     "\n",
     "Classically, if you have a number $x$, you can calculate $f(x)$ using a Taylor series or a polynomial approximation. In quantum computing, we can actually do the same thing by using an approach called Quantum Signal Processing (QSP). This will be covered towards the end of this tutorial. To get there, we first need to learn how to use the BlockEncoding class to transform into a \"Quantum Walk\" via Qubitization.\n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "### Qubitization in Qrisp as ``.qubitization``\n",
     "\n",
-    "While understanding the internal mechanics of q_switch and reflection is valuable for intuition, Qrisp abstracts this complexity away for standard operations. The BlockEncoding class features a dedicated method, .qubitization(), which automatically constructs the walk operator $W$ from your input matrix.This method handles the heavy lifting: it identifies the necessary reflection operators $R$ and interleaves them with the signal oracle (the block-encoding unitary $U$). If the original block-encoding unitary $U$ isn't Hermitian (i.e., $U^2 \\neq \\mathbb{1}$), Qrisp automatically handles the Hermitian embedding—often requiring one additional ancilla qubit—to ensure the walk operator remains unitary.Here is how you can transform a Hamiltonian into its qubitized walk operator in just a few lines:"
+    "While understanding the internal mechanics of q_switch and reflection is valuable for intuition, Qrisp abstracts this complexity away for standard operations. The BlockEncoding class features a dedicated method, .qubitization(), which automatically constructs the walk operator $W$ from your input matrix.This method handles the heavy lifting: it identifies the necessary reflection operators $R$ and interleaves them with the signal oracle (the block-encoding unitary $U$). If the original block-encoding unitary $U$ isn't Hermitian (i.e., $U^2 \\neq \\mathbb{1}$), Qrisp automatically handles the Hermitian embedding; often requiring one additional ancilla qubit. To ensure the walk operator remains unitary.Here is how you can transform a Hamiltonian into its qubitized walk operator in just a few lines:"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "source": [
     "If you look at the printed output of your benchmark, you’ll notice a very satisfying trend: the gate counts and depth grow linearly with $k$.\n",
     "\n",
-    "In the classical world, high-order polynomial approximations often come with a heavy computational tax. On a quantum computer, thanks to Qubitization, the $k$-th Chebyshev polynomial $T_k$ is implemented simply by repeating the walk operator $W$ exactly $k$ times. This efficiency is the \"secret sauce\" behind many modern quantum algorithms—we get high-precision approximations without the exponential gate-count explosion.\n",
+    "In the classical world, high-order polynomial approximations often come with a heavy computational tax. On a quantum computer, thanks to Qubitization, the $k$-th Chebyshev polynomial $T_k$ is implemented simply by repeating the walk operator $W$ exactly $k$ times. This efficiency is the \"secret sauce\" behind many modern quantum algorithms. We, therefore, get high-precision approximations without the exponential gate-count explosion.\n",
     "\n",
     "## Quantum Lanczos method\n",
     "\n",
@@ -312,7 +312,7 @@
    "id": "d7be9efc",
    "metadata": {},
    "source": [
-    "## Childs Kothari Somma for solving linear systems\n",
+    "## Childs-Kothari-Somma algorithm\n",
     "\n",
     "Before we jump into arbitrary polynomials, there is one specific application of Chebyshev polynomials combined with Linear Combination of Unitaries (LCU) that deserves its own spotlight: The Childs-Kothari-Somma (CKS) algorithm.\n",
     "\n",
