Major revision Filtered state preparation tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -9,7 +9,34 @@
     "\n",
     "Ground state preparation is a fundamental task in quantum computation with applications in chemistry, material sciences and physics. \n",
     "In this tutorial, we explore how to use [Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) for this task:\n",
-    "starting form an initial state, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state.\n",
+    "starting from an initial system state for a Heisenberg model, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state.\n",
+    "\n",
+    "## Contents\n",
+    "\n",
+    "-   [1. Heisenberg model](#1.-Heisenberg-model)\n",
+    "    -   [1.1. Spectral analysis](#1.1-Spectral-analysis)\n",
+    "\n",
+    "-   [2. Eigenstate Filtering](#2.-Eigenstate-Filtering)\n",
+    "\n",
+    "-   [3. Deep Dive: The Theory and Implementation](#3.-Deep-Dive:-The-Theory-and-Implementation)<br>\n",
+    "    -   [3.1 Introduction to Block-Encodings and GQSP](#3.1-Introduction-to-Block-Encodings-and-GQSP)<br>\n",
+    "    -   [3.2 Pauli Block-Encodings](#3.2-Pauli-Block-Encodings)<br>\n",
+    "    -   [3.3 Implementation](#3.3-Implementation)<br>\n",
+    "\n",
+    "-   [4. Conclusion](#4.-Conclusion)<br>\n",
+    "\n",
+    "\n",
+    "This tutorial guides you through the process using the example of a Heisenberg model. First, we will set up the model and perform a classical analysis of its spectrum and our initial state.\n",
+    "Next, we introduce the concept of eigenstate filtering and demonstrate how to use Qrisp’s BlockEncoding abstraction to isolate the ground state.\n",
+    "Finally, we take a deep dive into the theory of block-encodings and GQSP, providing a detailed look at the implementation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e39efb5",
+   "metadata": {},
+   "source": [
+    "## 1. Heisenberg model\n",
     "\n",
     "Let us consider an $L$-qubit antiferromagnetic Heisenberg model\n",
     "\n",
@@ -19,7 +46,7 @@
     "\n",
     "$$ \\ket{\\text{Singlet}} = 2^{-L/4}(\\ket{10}-\\ket{01})^{\\otimes L/2} $$\n",
     "\n",
-    "of consecutive qubits.\n"
+    "of consecutive qubits."
    ]
   },
   {
@@ -29,13 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
     "from qrisp import *\n",
     "from qrisp.gqsp import GQSP\n",
     "from qrisp.operators import X, Y, Z\n",
     "from qrisp.vqe.problems.heisenberg import create_heisenberg_init_function\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import networkx as nx\n",
     "\n",
     "\n",
     "def generate_1D_chain_graph(L):\n",
@@ -71,8 +98,10 @@
    "id": "08c6fc3a",
    "metadata": {},
    "source": [
-    "Let us take a closer look at the spectrum of this Hamiltonian and the inital state $\\ket{\\psi_0}=\\ket{\\text{Singlet}}$. \n",
-    "First, we compute all eigenvalues and the belonging eigenvectors. Secondly, we calculate the fidelities of the initial state $\\ket{\\psi_0}$ and each eigenstate $\\ket{\\lambda_k}$.\n",
+    "### 1.1 Spectral Analysis\n",
+    "\n",
+    "Let us take a closer look at the spectrum of this Hamiltonian, and the inital state $\\ket{\\psi_0}=\\ket{\\text{Singlet}}$. \n",
+    "First, we compute all eigenvalues and the corresponding eigenvectors. Secondly, we calculate the fidelities of the initial state $\\ket{\\psi_0}$ and each eigenstate $\\ket{\\lambda_k}$.\n",
     "Next, we find the indices $k$ of the eigenstates $\\ket{\\lambda_k}$ that have a significant overlap with the initial state, i.e., $F_k=|\\langle \\lambda_k | \\psi_0 \\rangle|^2>0.01$."
    ]
   },
@@ -89,7 +118,8 @@
     "idx = np.argsort(eigvals)\n",
     "eigvals_sorted = eigvals[idx].real\n",
     "eigvecs_sorted = eigvecs[:, idx]\n",
-    "print(f'Ground state energy: {eigvals_sorted[0]}\\n')\n",
+    "print(f'Ground state energy: {eigvals_sorted[0]}\\n') # lambda_0\n",
+    "print(f'First excited state energy: {eigvals_sorted[1]}\\n') # lambda_1\n",
     "\n",
     "psi0 = psi_prep().qs.statevector_array()\n",
     "fidelities = np.abs(eigvecs_sorted.conj().T @ psi0) ** 2\n",
@@ -98,6 +128,7 @@
     "significant_mask = fidelities > threshold\n",
     "indices = np.where(significant_mask)[0]\n",
     "\n",
+    "print(f'Indices (mask): {indices}\\n')\n",
     "print(f'Eigenvalues (mask): {eigvals_sorted[indices]}\\n')\n",
     "print(f'Fidelities (mask): {fidelities[indices]}\\n')"
    ]
@@ -108,10 +139,12 @@
    "metadata": {},
    "source": [
     "We observe that the initial state already has fidelity $F_0 \\approx 0.68$ with the ground state $\\ket{\\lambda_0}$ with energy $\\lambda_0 \\approx -0.63$. \n",
-    "Moreover, the inital state has a significant overlap with only 5 heigher energy eigenstates.\n",
+    "Moreover, the inital state has a significant overlap with only 5 higher energy eigenstates.\n",
     "\n",
-    "Starting at our initial state $\\ket{\\psi_0}$, we aim to prepare a state with an even higher overlap with the ground state $\\ket{\\psi_0}$. \n",
-    "Therefore, we aim to apply a Gaussian filter centered at $\\lambda_0$ which suppresses heigher energy components: indeed for \n",
+    "## 2. Eigenstate Filtering\n",
+    "\n",
+    "Starting at our initial state $\\ket{\\psi_0}$, we aim to prepare a state with an even higher overlap with the ground state $\\ket{\\lambda_0}$. \n",
+    "Therefore, we aim to apply a Gaussian filter centered at $\\lambda_0$ which suppresses higher energy components: indeed for \n",
     "\n",
     "$$ H = \\sum_i\\lambda_i\\ket{\\lambda_i}\\bra{\\lambda_i}\\quad \\text{and}\\quad \\ket{\\psi_0} = \\sum_i\\alpha_i\\ket{\\lambda_i} $$\n",
     "\n",
@@ -177,7 +210,9 @@
    "id": "0853aa40",
    "metadata": {},
    "source": [
-    "Let us now apply the filter using the built-in features of Qrisp's BlockEncoding programming abstraction."
+    "Let us now apply the filter using the built-in features of Qrisp's [BlockEncoding](../../reference/Block%20Encodings/BlockEncoding.rst) programming abstraction.\n",
+    "\n",
+    "We will delve deeper into block-encodings shortly; for now, think of them as a way to make Hermitian operators accessible for computation on a quantum computer."
    ]
   },
   {
@@ -189,12 +224,16 @@
    "source": [
     "from qrisp.block_encodings import BlockEncoding\n",
     "\n",
+    "# Encodes the operator $H$.\n",
     "BE = BlockEncoding.from_operator(H)\n",
     "\n",
-    "# Apply degree 10 Chebyshev approximation of Gaussian filter.\n",
-    "BE_filter = BE.poly(cheb_coeffs[:11], kind=\"Chebyshev\")\n",
+    "# Encodes the operator p(H) for a degree 10 Chebychev approximation \n",
+    "# of the Gaussian filter.\n",
+    "BE_filter = BE.poly(cheb_coeffs[:11], kind=\"Chebyshev\") \n",
     "\n",
+    "# Returns the filtered state.\n",
     "def filtered_psi_prep():\n",
+    "    # Applies p(H) to the inital state |psi_0>.\n",
     "    operand = BE_filter.apply_rus(psi_prep)()\n",
     "    return operand"
    ]
@@ -221,9 +260,31 @@
    "id": "34014c29",
    "metadata": {},
    "source": [
-    "Indeed, we achieve a significantly lower energy -- hence, a higher overlap with the ground state -- for the transformed state after QSP. \n",
+    "Indeed, we achieve a significantly lower energy ($\\approx -0.62$ versus $\\approx -0.56$) -- hence, a higher overlap with the ground state (energy $\\approx -0.63$) -- for the transformed state after QSP. \n",
     "\n",
-    "**But, how does this work?**"
+    "Let us note that, in general, we cannot deduce a higher ground state fidelity just form decreased energy. \n",
+    "However, if the observed energy lies within the spectral gap $\\Delta=\\lambda_1-\\lambda_0$ of the ground state energy $\\lambda_0$, we can use the following observation:\n",
+    "\n",
+    "Suppose that the state $\\ket{\\psi}$ has overlap with only the ground state and the first excited state, i.e., \n",
+    "$\\ket{\\psi} = \\alpha_0\\ket{\\lambda_0} + \\alpha_1\\ket{\\psi_1}$. Then the energy $E$ evaluates to \n",
+    "\n",
+    "$$ E = \\langle\\psi|H|\\psi\\rangle = \\langle\\psi|\\sum_i\\lambda_i\\ket{\\lambda_i}\\bra{\\lambda_i}|\\psi\\rangle = |\\alpha_0|^2\\lambda_0 + |\\alpha_1|^2\\lambda_1 $$\n",
+    "\n",
+    "where $F_0=|\\alpha_0|^2$ is the fidelity with the ground state. Writing $|\\alpha_1|^2=1-F_0$, we find \n",
+    "\n",
+    "$$ F_0=\\dfrac{\\lambda_1-E}{\\Delta} $$\n",
+    "\n",
+    "where $\\Delta=\\lambda_1-\\lambda_0$ is the spectral gap.\n",
+    "\n",
+    "This equation provides a lower bound on the ground state fidelity whenever the observed energy lies within the spectral gap of the ground state energy $\\lambda_0$.\n",
+    "Clearly, if the state $\\ket{\\psi}$ would overlap with additional higher energy excited states, the fidelity $F_0$ would be even higher.\n",
+    "\n",
+    "In our example, we find\n",
+    "\n",
+    "$$ F_0 \\geq \\dfrac{-0.58-(-0.62)}{-0.58-(-0.63)} = 0.8 $$\n",
+    "\n",
+    "Assuming that our initial state has zero overlap with all excited states until $\\ket{\\lambda_7}$ at energy $\\lambda_7\\approx -0.50$, \n",
+    "the above formula yields $F_0\\geq 0.92$ which is a significant increase form the initial fidelity $F_0\\approx 0.68$. "
    ]
   },
   {
@@ -231,12 +292,19 @@
    "id": "74d1f8d2",
    "metadata": {},
    "source": [
-    "Actually, we use GQSP to apply an approximation to the Gaussian filter in Chebyshev basis.\n",
+    "## 3. Deep Dive: The Theory and Implementation\n",
+    "\n",
+    "**But, how does this work?**\n",
+    "\n",
+    "Actually, we use [GQSP](../../reference/Algorithms/GQSP.rst) to apply an approximation to the Gaussian filter in Chebyshev basis.\n",
     "While it is obvious to apply transformations in Fourier basis with GQSP, is may be used in this setting as well.\n",
+    "\n",
+    "### 3.1 Introduction to Block-Encodings and GQSP\n",
+    "\n",
     "Let us recall the notion of a block-encoding:\n",
     "\n",
     "Block-encoding is a foundational technique that enables the implementation of non-unitary operations on a quantum computer by embedding them into a larger unitary operator.\n",
-    "Consider a normalized Pauli operator $H=\\sum_i\\alpha_iP_i$ where $\\alpha_i>0$ are real coefficients such that $\\sum_i|\\alpha_i|=1$, and $P_i$ are Pauli strings acting on $n$ qubits (including ther respective signs).\n",
+    "Consider a normalized Pauli operator $H=\\sum_i\\alpha_iP_i$ where $\\alpha_i>0$ are real coefficients such that $\\sum_i|\\alpha_i|=1$, and $P_i$ are Pauli strings acting on $n$ qubits (including their respective signs).\n",
     "We embed $H$ into the upper-left block of a unitary matrix $U$:\n",
     "\n",
     "$$ U = \\begin{pmatrix} H & * \\\\ * & * \\end{pmatrix} $$\n",
@@ -246,13 +314,28 @@
     "\n",
     "$$ (\\bra{0}_a \\otimes \\mathbb I_s) U (\\ket{0}_a \\otimes \\mathbb I_s) = H $$\n",
     "\n",
+    "Our next ingredient is [GQSP](../../reference/Algorithms/GQSP.rst): \n",
+    "[Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) allows for applying polynomial transformations $p(U)$ of a **unitary** $U$.\n",
+    "\n",
+    "Given a unitary $U$, and a complex degree $d$ polynomial $p(z)\\in\\mathbb C[z]$ that is bounded by 1 on the eunit circle, i.e., $|p(z)|^2\\leq 1$ for $|z|=1$,\n",
+    "this algorithm implements a unitary\n",
+    "\n",
+    "$$ \\begin{pmatrix} p(U) & * \\\\ * & * \\end{pmatrix} $$\n",
+    "\n",
+    "hence, can be undestood as block-encoding of $p(U)$, i.e.,\n",
+    "\n",
+    "$$ (\\bra{0}_a \\otimes \\mathbb I_s) \\text{GQSP}_{p,U} (\\ket{0}_a \\otimes \\mathbb I_s) = p(U) $$\n",
+    "\n",
+    "But, how can we actually realize $p(H)$ for a Hermitian operator $H$? This is achieved by a technique termed [qubitization](https://quantum-journal.org/papers/q-2019-07-12-163/):\n",
+    "\n",
     "Given a block-encoding unitary $U$ of a Hamiltonian $H$, such that $U^2=I$, let\n",
     "\n",
     "$$ R=(2\\ket{0}_a\\bra{0}_a-I_a)\\otimes I_s $$\n",
     "\n",
-    "be the reflection around $\\ket{0}_a$. Then $(RU)^k$ is a block-encoding of $T_k(H)$ where $T_k$ is the $k$-th Chebyshev polynomial of the first kind (see [Kirby et al.](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/)).\n",
+    "be the [reflection](../../reference/Primitives/reflection.rst) around $\\ket{0}_a$. Then $(RU)^k$ is a block-encoding of $T_k(H)$ where $T_k$ is the $k$-th Chebyshev polynomial of the first kind (see [Kirby et al.](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/)).\n",
     "\n",
-    "That is, using $RU$ as our unitary for GQSP, we effectively apply a polynomial in Chebyshev basis."
+    "That is, using $RU$ as our unitary for [GQSP](../../reference/Algorithms/GQSP.rst), we effectively apply a polynomial of the Hermitian operator $H$ in Chebyshev basis. \n",
+    "This algorithm is also referred to as [Generalized Quantum Eigenvalue Transform](../../reference/Algorithms/GQET.rst) (GQET)."
    ]
   },
   {
@@ -260,15 +343,31 @@
    "id": "ba2f542e",
    "metadata": {},
    "source": [
+    "### 3.2 Pauli Block-Encodings\n",
+    "\n",
     "First, we construct a block-encoding for the Pauli operator $H=\\sum_i\\alpha_iP_i$ using the Linear Combination of Unitaries (LCU) protocol.\n",
     "\n",
-    "We build our block-encoding unitary as $U=\\text{PREP}\\cdot \\text{SELECT}\\cdot \\text{PREP}^{\\dagger}$ where\n",
+    "We build our block-encoding unitary as $U=\\text{PREP}^{\\dagger}\\cdot \\text{SELECT}\\cdot \\text{PREP}$ where\n",
     "\n",
     "$$ \\text{SELECT} = \\sum_i\\ket{i}_a\\bra{i}_a\\otimes P_i $$\n",
     "\n",
-    "and\n",
+    "acts as a [quantum switch case](../../reference/Primitives/qswitch.rst) selecting the $i$-th unitary $P_i$ conditioned on the ancilla being in state $\\ket{0}_i$, and\n",
     "\n",
-    "$$ \\text{PREP}\\ket{0} = \\sum_i\\sqrt{\\alpha_i}\\ket{i}_a $$"
+    "$$ \\text{PREP}\\ket{0} = \\sum_i\\sqrt{\\alpha_i}\\ket{i}_a $$\n",
+    "\n",
+    "[prepares](../../reference/Primitives/prepare.rst) a state encoding the coefficients.\n",
+    "\n",
+    "Indeed, a direct calculation using $\\langle i | j\\rangle=\\delta_{ij}$ shows\n",
+    "\n",
+    "$$ \n",
+    "\\begin{align}\n",
+    "(\\bra{0}_a \\otimes \\mathbb I_s) \\text{PREP}^{\\dagger}\\cdot &\\text{SELECT}\\cdot \\text{PREP} (\\ket{0}_a \\otimes \\mathbb I_s) \\\\\n",
+    "&= \\left(\\sum_i \\sqrt{\\alpha_i}\\bra{i}_a \\otimes I_s\\right) \\left(\\sum_j\\ket{j}_a\\bra{j}_a\\otimes P_j\\right) \\left(\\sum_k \\sqrt{\\alpha_k}\\ket{k}_a\\otimes I_s\\right) \\\\\n",
+    "&= \\sum_j \\alpha_j P_j = H.\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "In Qrisp, this Pauli block-encoding unitary can be defined as follows:"
    ]
   },
   {
@@ -284,9 +383,9 @@
     "n = len(unitaries).bit_length() # Number of qubits for auxiliary variable.\n",
     "\n",
     "# Define block-encoding unitary using LCU = PREP SELECT PREP_dg.\n",
-    "def U(case, operand):\n",
-    "    with conjugate(prepare)(case, coeffs):\n",
-    "        q_switch(case, unitaries, operand) # quantum switch aka SELECT"
+    "def U(anc, operand):\n",
+    "    with conjugate(prepare)(anc, coeffs):\n",
+    "        q_switch(anc, unitaries, operand) # quantum switch aka SELECT"
    ]
   },
   {
@@ -294,7 +393,17 @@
    "id": "f247c820",
    "metadata": {},
    "source": [
-    "Next, we define a function for performing the filtered state prepation using GQSP."
+    "## 3.3 Implementation\n",
+    "\n",
+    "Next, we define a function for performing the filtered state prepation using [GQSP](../../reference/Algorithms/GQSP.rst).\n",
+    "\n",
+    "Block-encodings and (generalized) quantum signal processing are applied to realize non-unitray transformations on a quantum computer. \n",
+    "Thereby, the desired transformation is successfully realized upon projecting onto the subspace where the ancilla variables are in state $\\ket{0}$.\n",
+    "In this example, the ancilla QuantumBool ``anc_qsp`` and QuantumFloat ``anc_be`` must both be measured in state $\\ket{0}$. \n",
+    "Hence, the filtered state preparation is embedded within a [Repeat-Until-Success](../../reference/Jasp/Control%20Flow/RUS.rst) protocol.\n",
+    "\n",
+    "The ``RUS`` decorator is applied to a trial function that must return a boolean value as first return value.\n",
+    "The trial function is repeatedly executed until the boolean value is True, and the remaining return values are retuned."
    ]
   },
   {
@@ -313,30 +422,29 @@
     "        reflection(case) # Reflection around |0>.\n",
     "\n",
     "\n",
-    "    qbl = QuantumBool()\n",
-    "    # Pauli block-encoding requires one auxiliary variable.\n",
-    "    case = QuantumFloat(n)\n",
+    "    # GQSP requires one 1-qubit ancilla variable.\n",
+    "    anc_qsp = QuantumBool()\n",
+    "    # Pauli block-encoding requires one n-qubit ancilla variable.\n",
+    "    anc_be = QuantumFloat(n)\n",
     "    operand = psi_prep()\n",
     "\n",
     "    # Apply degree 10 Chebyshev approximation of Gaussian filter.\n",
-    "    GQSP(qbl, case, operand, unitary=RU, p=cheb_coeffs[:11], k=0)\n",
+    "    GQSP(anc_qsp, # Ancilla variable for GQSP protocol.\n",
+    "         anc_be, # Ancilla variable for block-encoding.\n",
+    "         operand, # Variable holding the system state |psi_0>.\n",
+    "         unitary=RU, # Block-encoding unitary.\n",
+    "         p=cheb_coeffs[:11], # Polynomial transformation to apply.\n",
+    "    )\n",
     "\n",
-    "    # Protocol is successful if all auxiliary variables are measured in state |0>.\n",
-    "    success_bool = (measure(qbl) == 0) & (measure(case) == 0)\n",
-    "    reset(qbl)\n",
-    "    reset(case)\n",
-    "    qbl.delete()\n",
-    "    case.delete()\n",
+    "    # Protocol is successful if all ancilla variables are measured in state |0>.\n",
+    "    success_bool = (measure(anc_qsp) == 0) & (measure(anc_be) == 0)\n",
+    "    # Release quantum resources.\n",
+    "    # The operand variable will be realeased automatically if success_bool=False.\n",
+    "    reset(anc_qsp)\n",
+    "    reset(anc_be)\n",
+    "    anc_qsp.delete()\n",
+    "    anc_be.delete()\n",
     "    return success_bool, operand"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f2e7b43",
-   "metadata": {},
-   "source": [
-    "Recall that GQSP is probabilistic, and the desired transformation is successfully applied if the auxiliary QuantumBool and QuantumFloat are both measured in state $\\ket{0}$. \n",
-    "Hence, the filtered state preparation is embedded within a [Repeat-Until-Success](../../reference/Jasp/Control%20Flow/RUS.rst) protocol."
    ]
   },
   {
@@ -361,7 +469,15 @@
    "id": "d5b0a5af",
    "metadata": {},
    "source": [
-    "And voila, we again achieve a significantly lower energy -- hence, a higher overlap with the ground state -- for the transformed state after QSP. "
+    "And voila, we again achieve a significantly lower energy ($\\approx -0.62$ versus $\\approx -0.56$) -- hence, a higher overlap with the ground state (energy $\\approx -0.63$) -- for the transformed state after QSP. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56c8a5f6",
+   "metadata": {},
+   "source": [
+    "## 4. Conclusion"
    ]
   }
  ],
