--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# Filtered state preparation with GQSP\n",
     "\n",
-    "Ground state preparation is a fundamental task in quantum computation with applications in chemistry, material sciences and physics. \n",
+    "Ground state preparation is a fundamental task in quantum computation, serving as a cornerstone for simulating strongly correlated systems in chemistry, material sciences and physics.\n",
+    "Understanding the ground state—the state of lowest energy—is essential for predicting a system's stability, electronic properties, and chemical reactivity.\n",
+    "At the macroscopic level, the behavior of most materials at low temperatures is governed by their ground-state configuration. For instance:\n",
+    "\n",
+    "-   In Chemistry: The ground state determines the equilibrium geometry of molecules. Knowing this energy level allows us to calculate reaction rates and understand how catalysts lower the energy barriers for specific processes.\n",
+    "-   In Material Science: Key phenomena such as superconductivity and magnetism are emergent properties of the ground state in many-body systems.\n",
+    "-   In Physics: Identifying the ground state of a Hamiltonian like the Heisenberg model reveals whether a material will behave as an insulator, a metal, or a more exotic phase of matter, such as a quantum spin liquid.\n",
+    "\n",
+    "However, finding the ground state is a notoriously difficult challenge. In fact, ground state preparation is QMA-complete, meaning it is generally hard even for quantum computers to find the exact solution for any arbitrary Hamiltonian. In practice, we often circumvent this complexity by starting with a 'good enough' initial guess (a trial state) and employing quantum algorithms, e.g., [Gluza et al.](https://journals.aps.org/prl/abstract/10.1103/rw81-k8vk), to systematically lower the system's energy—a process often referred to as algorithmic cooling.\n",
+    "\n",
     "In this tutorial, we explore how to use [Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) for this task:\n",
     "starting from an initial system state for a Heisenberg model, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state.\n",
     "\n",
@@ -42,11 +51,13 @@
     "\n",
     "$$ H = \\sum_{i=0}^{L-1}(X_iX_{i+1} + Y_iY_{i+1} + Z_iZ_{i+1}) $$\n",
     "\n",
-    "As initial system state we use a tensor product of Singlet states\n",
+    "Physically, [antiferromagnetism](https://en.wikipedia.org/wiki/Antiferromagnetism) describes materials where neighboring spins \"want\" to point in opposite directions $\\uparrow\\downarrow$ to reach the lowest energy state. Unlike a standard fridge magnet (where spins point the same way), an antiferromagnet has no net external magnetism. These models are crucial for understanding quantum materials, such as high-temperature superconductors.\n",
+    "\n",
+    "As initial system state we choose a tensor product of Singlet states\n",
     "\n",
     "$$ \\ket{\\text{Singlet}} = 2^{-L/4}(\\ket{10}-\\ket{01})^{\\otimes L/2} $$\n",
     "\n",
-    "of consecutive qubits."
+    "of consecutive qubits. Starting at our initial state $\\ket{\\text{Singlet}}$, we aim to prepare a state with an even higher overlap with the ground state of the [operator](../../reference/Operators/QubitOperator.rst)  $H$. "
    ]
   },
   {
@@ -67,7 +78,7 @@
     "\n",
     "def generate_1D_chain_graph(L):\n",
     "    graph = nx.Graph()\n",
-    "    graph.add_edges_from([(k, (k+1)%L) for k in range(L-1)]) \n",
+    "    graph.add_edges_from([(k, (k+1)%L) for k in range(L-1)])\n",
     "    return graph\n",
     "\n",
     "\n",
@@ -76,19 +87,26 @@
     "G = generate_1D_chain_graph(L)\n",
     "H = (1 / (3 * L - 3)) * sum((X(i) * X(j) + Y(i) * Y(j) + Z(i) * Z(j)) \\\n",
     "                            for i, j in G.edges())\n",
+    "\n",
+    "# Finds a maximum matching M of the graph G.\n",
+    "# For a chain graph G, M contains every second edge of G.\n",
     "M = nx.maximal_matching(G)\n",
+    "# Prepares a tensor product of Singlet states \n",
+    "# corresponding to the edges in M when applied to \n",
+    "# a QuantumVariable in state |0>.\n",
     "U0 = create_heisenberg_init_function(M)\n",
     "\n",
     "\n",
-    "# Define initial state preparation function \n",
+    "# Define initial state preparation function\n",
     "# preparing a tensor product of Singlet states.\n",
     "def psi_prep():\n",
-    "    operand = QuantumVariable(H.find_minimal_qubit_amount())\n",
+    "    operand = QuantumVariable(L)\n",
     "    U0(operand)\n",
     "    return operand\n",
     "\n",
     "\n",
     "# Calculate the energy for the initial state.\n",
+    "# Computes the operator's expectation value using Pauli measurement settings.\n",
     "E = H.expectation_value(psi_prep, precision=0.001)()\n",
     "print(E)"
    ]
@@ -128,9 +146,9 @@
     "significant_mask = fidelities > threshold\n",
     "indices = np.where(significant_mask)[0]\n",
     "\n",
-    "print(f'Indices (mask): {indices}\\n')\n",
-    "print(f'Eigenvalues (mask): {eigvals_sorted[indices]}\\n')\n",
-    "print(f'Fidelities (mask): {fidelities[indices]}\\n')"
+    "print(f'Indices: {indices}\\n')\n",
+    "print(f'Eigenvalues: {eigvals_sorted[indices]}\\n')\n",
+    "print(f'Fidelities: {fidelities[indices]}\\n')"
    ]
   },
   {
@@ -157,7 +175,10 @@
     "$$ f(H)\\ket{\\psi_0} = \\left(\\sum_i f(\\lambda_i)\\ket{\\lambda_i}\\bra{\\lambda_i}\\right) \\sum_j\\alpha_j\\ket{\\lambda_j} = \\sum_i f(\\lambda_i)\\alpha_i\\ket{\\lambda_i} $$\n",
     "\n",
     "Thus, the magnitude of the amplitude of $\\ket{\\lambda_i}$ for $i>0$ is suppressed relative to the amplitude of $\\ket{\\lambda_0}$ in the state $\\ket{\\psi}$.\n",
-    "This filter is approximated by Chebyshev polynomials of the first kind."
+    "\n",
+    "This filter is approximated by [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) of the first kind. \n",
+    "Chebyshev polynomials $T_n(x)$ are a sequence of orthogonal functions defined by the recurrence: $T_0(x)=1$, $T_1(x)=x$ and $T_{n+1}(x)=2xT_n(x)-T_{n-1}(x)$.\n",
+    "They are crucial for quantum algorithms (and approximation theory in gerneral) because: 1) They minimize the maximum error when approximating functions like our Gaussian filter. 2) Quantum Signal Processing naturally implements transformations of a Hermitian operator $H$ as a polynomial expansion in the Chebyshev basis.\n"
    ]
   },
   {
@@ -296,8 +317,11 @@
     "\n",
     "**But, how does this work?**\n",
     "\n",
-    "Actually, we use [GQSP](../../reference/Algorithms/GQSP.rst) to apply an approximation to the Gaussian filter in Chebyshev basis.\n",
-    "While it is obvious to apply transformations in Fourier basis with GQSP, is may be used in this setting as well.\n",
+    "Essentially, we use [GQSP](../../reference/Algorithms/GQSP.rst) to apply a polynomial approximation of the Gaussian filter in Chebyshev basis resulting in the filtered state\n",
+    "\n",
+    "$$ \\ket{\\psi}=\\dfrac{p(H)\\ket{\\psi_0}}{\\|p(H)\\ket{\\psi_0}\\|} $$\n",
+    "\n",
+    "Before we dive into the implementation details, let's establish a basic understanding of block-encodings and GQSP.\n",
     "\n",
     "### 3.1 Introduction to Block-Encodings and GQSP\n",
     "\n",
@@ -335,7 +359,7 @@
     "be the [reflection](../../reference/Primitives/reflection.rst) around $\\ket{0}_a$. Then $(RU)^k$ is a block-encoding of $T_k(H)$ where $T_k$ is the $k$-th Chebyshev polynomial of the first kind (see [Kirby et al.](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/)).\n",
     "\n",
     "That is, using $RU$ as our unitary for [GQSP](../../reference/Algorithms/GQSP.rst), we effectively apply a polynomial of the Hermitian operator $H$ in Chebyshev basis. \n",
-    "This algorithm is also referred to as [Generalized Quantum Eigenvalue Transform](../../reference/Algorithms/GQET.rst) (GQET)."
+    "This algorithm is also referred to as Generalized Quantum Eigenvalue Transform (GQET)."
    ]
   },
   {
@@ -345,7 +369,8 @@
    "source": [
     "### 3.2 Pauli Block-Encodings\n",
     "\n",
-    "First, we construct a block-encoding for the Pauli operator $H=\\sum_i\\alpha_iP_i$ using the Linear Combination of Unitaries (LCU) protocol.\n",
+    "First, we construct a block-encoding for the Pauli operator $H=\\sum_i\\alpha_iP_i$, where $\\alpha_i>0$ are real coefficients and $P_i$ are Pauli strings (including their respective signs), \n",
+    "using the Linear Combination of Unitaries (LCU) protocol:\n",
     "\n",
     "We build our block-encoding unitary as $U=\\text{PREP}^{\\dagger}\\cdot \\text{SELECT}\\cdot \\text{PREP}$ where\n",
     "\n",
@@ -477,7 +502,19 @@
    "id": "56c8a5f6",
    "metadata": {},
    "source": [
-    "## 4. Conclusion"
+    "## 4. Conclusion\n",
+    "\n",
+    "In this tutorial, we demonstrated how Quantum Signal Processing can be leveraged for ground state preparation. \n",
+    "By applying a Gaussian filter to a Heisenberg model, we showcased how eigenstate filtering can systematically enhance the overlap with the target state.\n",
+    "\n",
+    "Key takeaways include:\n",
+    "\n",
+    "-   **The Versatility of Block-Encodings:** How Qrisp’s abstraction allows us to embed non-unitary operators—like our Hamiltonian—into quantum programs.\n",
+    "-   **Algorithmic Flexibility:** GQSP allows us to implement polynomial transformations, turning abstract mathematical filters into executable quantum programs.\n",
+    "-   **Scalability:** While we analyzed the spectrum classically for verification, the methods discussed here provide a scalable path towards exploring complex quantum systems that are beyond the reach of classical simulation.\n",
+    "\n",
+    "As a next step, you might explore how different filter shapes (such as step functions for excited state isolation) or more complex Hamiltonians impact the performance of the algorithm.\n",
+    "For those interested in how these filtering techniques can be utilized to enhance other algorithms, we recommend exploring the work of Lee et al. (2025) on [Filtered Quantum Phase Estimation](https://arxiv.org/pdf/2510.04294), which further investigates the utility of spectral filters in the context of phase estimation.\n"
    ]
   }
  ],
