Some minor stylistic improvements for filtering tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -8,14 +8,14 @@
     "# Filtered state preparation with GQSP\n",
     "\n",
     "Ground state preparation is a fundamental task in quantum computation, serving as a cornerstone for simulating strongly correlated systems in chemistry, material sciences and physics.\n",
-    "Understanding the ground state—the state of lowest energy—is essential for predicting a system's stability, electronic properties, and chemical reactivity.\n",
-    "At the macroscopic level, the behavior of most materials at low temperatures is governed by their ground-state configuration. For instance:\n",
+    "Understanding the ground state, i.e., the state of lowest energy, is essential for predicting a system's stability, electronic properties, and chemical reactivity.\n",
+    "At the macroscopic level, the behavior of most materials at low temperatures is governed by their ground state configuration. For instance:\n",
     "\n",
     "-   In Chemistry: The ground state determines the equilibrium geometry of molecules. Knowing this energy level allows us to calculate reaction rates and understand how catalysts lower the energy barriers for specific processes.\n",
     "-   In Material Science: Key phenomena such as superconductivity and magnetism are emergent properties of the ground state in many-body systems.\n",
     "-   In Physics: Identifying the ground state of a Hamiltonian like the Heisenberg model reveals whether a material will behave as an insulator, a metal, or a more exotic phase of matter, such as a quantum spin liquid.\n",
     "\n",
-    "However, finding the ground state is a notoriously difficult challenge. In fact, ground state preparation is QMA-complete, meaning it is generally hard even for quantum computers to find the exact solution for any arbitrary Hamiltonian. In practice, we often circumvent this complexity by starting with a 'good enough' initial guess (a trial state) and employing quantum algorithms, e.g., [Gluza et al.](https://journals.aps.org/prl/abstract/10.1103/rw81-k8vk), to systematically lower the system's energy—a process often referred to as algorithmic cooling.\n",
+    "However, finding the ground state is a notoriously difficult challenge. In fact, ground state preparation is QMA-complete, meaning it is generally hard even for quantum computers to find the exact solution for any arbitrary Hamiltonian. In practice, we often circumvent this complexity by starting with a 'good enough' initial guess (a trial state) and employing quantum algorithms, e.g., [Gluza et al.](https://journals.aps.org/prl/abstract/10.1103/rw81-k8vk), to systematically lower the system's energy, a process often referred to as algorithmic cooling.\n",
     "\n",
     "In this tutorial, we explore how to use [Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) for this task:\n",
     "starting from an initial system state for a Heisenberg model, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state.\n",
@@ -36,7 +36,7 @@
     "\n",
     "\n",
     "This tutorial guides you through the process using the example of a Heisenberg model. First, we will set up the model and perform a classical analysis of its spectrum and our initial state.\n",
-    "Next, we introduce the concept of eigenstate filtering and demonstrate how to use Qrisp’s BlockEncoding abstraction to isolate the ground state.\n",
+    "Next, we introduce the concept of eigenstate filtering and demonstrate how to use Qrisp’s BlockEncoding abstraction with built-in quantum signal processing features to isolate the ground state.\n",
     "Finally, we take a deep dive into the theory of block-encodings and GQSP, providing a detailed look at the implementation.\n"
    ]
   },
@@ -321,7 +321,7 @@
     "\n",
     "$$ \\ket{\\psi}=\\dfrac{p(H)\\ket{\\psi_0}}{\\|p(H)\\ket{\\psi_0}\\|} $$\n",
     "\n",
-    "Before we dive into the implementation details, let's establish a basic understanding of block-encodings and GQSP.\n",
+    "Before we dive into the implementation details, let's establish a basic understanding of block-encodings and quantum signal processing.\n",
     "\n",
     "### 3.1 Introduction to Block-Encodings and GQSP\n",
     "\n",
@@ -509,7 +509,7 @@
     "\n",
     "Key takeaways include:\n",
     "\n",
-    "-   **The Versatility of Block-Encodings:** How Qrisp’s abstraction allows us to embed non-unitary operators—like our Hamiltonian—into quantum programs.\n",
+    "-   **The Versatility of Block-Encodings:** How Qrisp’s abstraction allows us to embed non-unitary operators, like our Heisenberg Hamiltonian, into quantum programs.\n",
     "-   **Algorithmic Flexibility:** GQSP allows us to implement polynomial transformations, turning abstract mathematical filters into executable quantum programs.\n",
     "-   **Scalability:** While we analyzed the spectrum classically for verification, the methods discussed here provide a scalable path towards exploring complex quantum systems that are beyond the reach of classical simulation.\n",
     "\n",
