Added some motivation for spectral analysis in tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -118,6 +118,7 @@
    "source": [
     "### 1.1 Spectral Analysis\n",
     "\n",
+    "While this classical analysis does not scale to larger systems, it provides crucial intuition for the filtering approach by illustrating how it acts upon the Hamiltonian spectrum.\n",
     "Let us take a closer look at the spectrum of this Hamiltonian, and the inital state $\\ket{\\psi_0}=\\ket{\\text{Singlet}}$. \n",
     "First, we compute all eigenvalues and the corresponding eigenvectors. Secondly, we calculate the fidelities of the initial state $\\ket{\\psi_0}$ and each eigenstate $\\ket{\\lambda_k}$.\n",
     "Next, we find the indices $k$ of the eigenstates $\\ket{\\lambda_k}$ that have a significant overlap with the initial state, i.e., $F_k=|\\langle \\lambda_k | \\psi_0 \\rangle|^2>0.01$."
@@ -162,7 +163,7 @@
     "## 2. Eigenstate Filtering\n",
     "\n",
     "Starting at our initial state $\\ket{\\psi_0}$, we aim to prepare a state with an even higher overlap with the ground state $\\ket{\\lambda_0}$. \n",
-    "Therefore, we aim to apply a Gaussian filter centered at $\\lambda_0$ which suppresses higher energy components: indeed for \n",
+    "Therefore, we aim to apply a [Gaussian filter](https://en.wikipedia.org/wiki/Gaussian_filter) centered at $\\lambda_0$ which suppresses higher energy components: indeed for \n",
     "\n",
     "$$ H = \\sum_i\\lambda_i\\ket{\\lambda_i}\\bra{\\lambda_i}\\quad \\text{and}\\quad \\ket{\\psi_0} = \\sum_i\\alpha_i\\ket{\\lambda_i} $$\n",
     "\n",
